--- a/NetCoreConsoleTests/NetCoreConsoleTests.csproj
+++ b/NetCoreConsoleTests/NetCoreConsoleTests.csproj
@@ -16,6 +16,12 @@
     <None Update="1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
