--- a/NetCoreConsoleTests/NetCoreConsoleTests.csproj
+++ b/NetCoreConsoleTests/NetCoreConsoleTests.csproj
@@ -22,6 +22,12 @@
     <None Update="3.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
