--- a/NetAutoGUI/NetAutoGUI.csproj
+++ b/NetAutoGUI/NetAutoGUI.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	<LangVersion>Latest</LangVersion>
 	<Nullable>enable</Nullable>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<PackageProjectUrl>https://github.com/yangzhongke/NetAutoGUI</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/yangzhongke/NetAutoGUI</RepositoryUrl>
+	<Description>.NET version of pyAutoGUI</Description>
+	<AssemblyVersion>1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
