add Wechat robot

--- a/NetCoreConsoleTests/NetCoreConsoleTests.csproj
+++ b/NetCoreConsoleTests/NetCoreConsoleTests.csproj
@@ -76,11 +76,16 @@
     <None Update="calc\plus.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="emoji.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="zack.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="calc\" />
     <Folder Include="baidu\" />
   </ItemGroup>
-
 </Project>
