--- a/NetAutoGUI/NetAutoGUI.csproj
+++ b/NetAutoGUI/NetAutoGUI.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended" Version="4.0.0" />
     <PackageReference Include="OpenCvSharp4" Version="4.9.0.20240103" />
     <PackageReference Include="SkiaSharp" Version="2.88.7" />
     <PackageReference Include="WildcardMatch" Version="1.0.7" />
