--- a/NetCoreConsoleTests/NetCoreConsoleTests.csproj
+++ b/NetCoreConsoleTests/NetCoreConsoleTests.csproj
@@ -97,4 +97,8 @@
     <Folder Include="calc\" />
     <Folder Include="baidu\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="3.116.1" />
+  </ItemGroup>
 </Project>
