--- a/Tests/NetAutoGUI.UnitTests/NetAutoGUI.UnitTests.csproj
+++ b/Tests/NetAutoGUI.UnitTests/NetAutoGUI.UnitTests.csproj
@@ -30,6 +30,9 @@
     <None Update="BitmapDataTests\1.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="BitmapDataExtensionsTests\1.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
