--- a/Tests/NetCoreConsoleTests/NetCoreConsoleTests.csproj
+++ b/Tests/NetCoreConsoleTests/NetCoreConsoleTests.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>	 
-    <ProjectReference Include="..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />	 
-    <ProjectReference Include="..\NetAutoGUI\NetAutoGUI.csproj" />
+    <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />	 
+    <ProjectReference Include="..\..\NetAutoGUI\NetAutoGUI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
