--- a/Tests/NetCoreWinFormTests/NetCoreWinFormTests.csproj
+++ b/Tests/NetCoreWinFormTests/NetCoreWinFormTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
+    <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
   </ItemGroup>
 
 </Project>
