--- a/Samples/AllSamplesInOneWinForms/AllSamplesInOneWinForms.csproj
+++ b/Samples/AllSamplesInOneWinForms/AllSamplesInOneWinForms.csproj
@@ -8,4 +8,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
+    </ItemGroup>
+
 </Project>
