--- a/Samples/AllSamplesInOneWinForms/AllSamplesInOneWinForms.csproj
+++ b/Samples/AllSamplesInOneWinForms/AllSamplesInOneWinForms.csproj
@@ -12,4 +12,14 @@
       <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Images\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Images\startMenu.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
