--- a/NetAutoGUI.Windows/NetAutoGUI.Windows.csproj
+++ b/NetAutoGUI.Windows/NetAutoGUI.Windows.csproj
@@ -9,13 +9,14 @@
 	<Title>.NET version of pyAutoGUI</Title>
 	<PackageProjectUrl>https://github.com/yangzhongke/NetAutoGUI</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/yangzhongke/NetAutoGUI</RepositoryUrl>
-	<Version>2.0.0</Version>
+	<Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
     <PackageReference Include="SkiaSharp" Version="3.116.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.11" />
+    <PackageReference Include="Vanara.PInvoke.DwmApi" Version="4.0.6" />
     <PackageReference Include="Vanara.PInvoke.User32" Version="4.0.4" />
   </ItemGroup>
 
