--- a/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
+++ b/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>NetAutoGUI.Windows.UnitTests</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
