--- a/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
+++ b/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
@@ -26,5 +26,10 @@
     <ItemGroup>
       <ProjectReference Include="..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <None Update="AppsForTest\WinFormsAppForTest1.exe">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 
 </Project>
