--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,5 +27,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Publish Test App
+      run: dotnet publish -p:PublishProfile=.\WinFormsAppForTest1\Properties\PublishProfiles\FolderProfile.pubxml
     - name: Test
       run: dotnet test --no-build --verbosity normal
