publish at runtime

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Publish Test App
-      run: dotnet publish -p:PublishProfile=.\WinFormsAppForTest1\Properties\PublishProfiles\FolderProfile.pubxml
+      run: dotnet publish -c Release -r win-x86 --self-contained true
+      working-directory: WinFormsAppForTest1      
     - name: Test
       run: dotnet test --no-build --verbosity normal
