--- a/WinFormsAppForTest1/WinFormsAppForTest1.csproj
+++ b/WinFormsAppForTest1/WinFormsAppForTest1.csproj
@@ -7,6 +7,11 @@
         <UseWindowsForms>true</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
 		<DebugType>None</DebugType>
+		<RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties\" />
+    </ItemGroup>
 
 </Project>
