--- a/Tests/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
+++ b/Tests/NetAutoGUI.Windows.IntegrationTests/NetAutoGUI.Windows.IntegrationTests.csproj
@@ -24,7 +24,7 @@
         <PackageReference Include="FileSignatures" Version="5.1.1" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
+      <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
     </ItemGroup>
 
 </Project>
