--- a/Samples/SamplesInConsoleApp/SamplesInConsoleApp.csproj
+++ b/Samples/SamplesInConsoleApp/SamplesInConsoleApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
+    <ProjectReference Include="..\..\NetAutoGUI.Windows\NetAutoGUI.Windows.csproj" />
   </ItemGroup>
 
   <ItemGroup>
