--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Publish Test App
       run: .\publish-apps-for-test.bat
       working-directory: Tests/  
+    - name: Install Virtual Display
+      run: dotnet run
+      working-directory: Tests/VirtualDisplayInstaller
     - name: Test
       run: dotnet test --no-build --verbosity normal
