--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,13 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: |
-          7.0.x
-          8.0.x
-          9.0.x
+    #- name: Setup .NET
+    #  uses: actions/setup-dotnet@v4
+    #  with:
+    #    dotnet-version: |
+    #      7.0.x
+    #      8.0.x
+    #      9.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
