--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: self-hosted #The hosted runner may not run as a Windows service, or it cannot use multiple monitors.
     steps:
     - uses: actions/checkout@v4
     #- name: Setup .NET
