--- a/Tests/WinFormsAppForTest1/WinFormsAppForTest1.csproj
+++ b/Tests/WinFormsAppForTest1/WinFormsAppForTest1.csproj
@@ -14,4 +14,13 @@
       <Folder Include="Properties\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Update="Form1.cs">
+            <SubType>Form</SubType>
+        </Compile>
+        <Compile Update="Form2.cs">
+            <SubType>Form</SubType>
+        </Compile>
+    </ItemGroup>
+
 </Project>
